# simple-chat

./: .gitignore  CMakeLists.txt
examples/windows/: main.cpp  socket.cpp  socket.hpp
src/: client_main.cpp  main.cpp  server_main.cpp
src/common/: ChatClient.cpp  ChatClient.hpp  ChatMessage.cpp  ChatMessage.hpp  ChatParticipant.cpp  ChatParticipant.hpp  ChatRoom.cpp  ChatRoom.hpp  ChatServer.cpp  ChatServer.hpp  IClientSocketTCP.hpp  IServerSocketTCP.hpp  ISocket.hpp  ISocketAddress.cpp  ISocketAddress.hpp  ISocketTCP.hpp  ISocketUDP.hpp  Logger.cpp  Logger.hpp  forwards.hpp
src/common/sockets/: IClientSocketTCP.hpp  IServerSocketTCP.hpp  ISocket.hpp  ISocketAddress.cpp  ISocketAddress.hpp  ISocketUDP.hpp  ITasksQueue.hpp  SocketFactory.hpp  TasksProcessor.cpp  TasksProcessor.hpp  forwards.hpp
src/common/sockets/errors/: SocketError.hpp
src/linux/: ClientSocketTCP.cpp  ClientSocketTCP.hpp  ServerSocketTCP.cpp  ServerSocketTCP.hpp  Socket.cpp  Socket.hpp  SocketAddress.cpp  SocketAddress.hpp  SocketBase.cpp  SocketBase.hpp  SocketTCP.cpp  SocketTCP.hpp  SocketUDP.cpp  SocketUDP.hpp
src/linux/sockets/: ClientSocketTCP.cpp  ClientSocketTCP.hpp  ServerSocketTCP.cpp  ServerSocketTCP.hpp  SocketAddress.cpp  SocketAddress.hpp  SocketBase.cpp  SocketBase.hpp  SocketFactory.cpp  SocketUDP.cpp  SocketUDP.hpp
src/windows/: Socket.cpp  Socket.hpp
src/windows/sockets/: ClientSocketTCP.cpp  ClientSocketTCP.hpp  ServerSocketTCP.cpp  ServerSocketTCP.hpp  SocketAddress.cpp  SocketAddress.hpp  SocketBase.cpp  SocketBase.hpp  SocketFactory.cpp  SocketUDP.cpp  SocketUDP.hpp
